--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -20,9 +20,7 @@
       "bucket_name": "og-image-api"
     }
   ],
-  "vars": {
-    "SCREENSHOT_API_KEY": "key_uByFWv5m7pLgwBUxefT53A"
-  }
+  "vars": {}
   /**
    * Smart Placement
    * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
